--- a/Shell/SALShell/SALShell/SALShell.csproj
+++ b/Shell/SALShell/SALShell/SALShell.csproj
@@ -6,6 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="SymbolTable\ArduinoSymbols.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="SymbolTable\ArduinoSymbols.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
