Call to the Arduino-Cli can now be made

--- a/.gitignore
+++ b/.gitignore
@@ -360,3 +360,67 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+Antlr/Test_Parser_src/Test_Parser/Tests/build.options.json
+Antlr/Test_Parser_src/Test_Parser/Tests/compile_commands.json
+Antlr/Test_Parser_src/Test_Parser/Tests/core/abi.cpp.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/abi.cpp.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/CDC.cpp.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/CDC.cpp.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/core.a
+Antlr/Test_Parser_src/Test_Parser/Tests/core/HardwareSerial.cpp.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/HardwareSerial.cpp.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/HardwareSerial0.cpp.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/HardwareSerial0.cpp.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/HardwareSerial1.cpp.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/HardwareSerial1.cpp.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/HardwareSerial2.cpp.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/HardwareSerial2.cpp.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/HardwareSerial3.cpp.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/HardwareSerial3.cpp.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/hooks.c.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/hooks.c.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/IPAddress.cpp.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/IPAddress.cpp.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/main.cpp.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/main.cpp.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/new.cpp.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/new.cpp.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/PluggableUSB.cpp.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/PluggableUSB.cpp.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/Print.cpp.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/Print.cpp.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/Stream.cpp.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/Stream.cpp.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/Tone.cpp.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/Tone.cpp.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/USBCore.cpp.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/USBCore.cpp.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/WInterrupts.c.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/WInterrupts.c.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/wiring.c.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/wiring.c.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/wiring_analog.c.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/wiring_analog.c.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/wiring_digital.c.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/wiring_digital.c.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/wiring_pulse.c.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/wiring_pulse.c.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/wiring_pulse.S.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/wiring_pulse.S.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/wiring_shift.c.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/wiring_shift.c.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/WMath.cpp.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/WMath.cpp.o
+Antlr/Test_Parser_src/Test_Parser/Tests/core/WString.cpp.d
+Antlr/Test_Parser_src/Test_Parser/Tests/core/WString.cpp.o
+Antlr/Test_Parser_src/Test_Parser/Tests/CppCompileTest.txt
+Antlr/Test_Parser_src/Test_Parser/Tests/preproc/ctags_target_for_gcc_minus_e.cpp
+Antlr/Test_Parser_src/Test_Parser/Tests/sketch/Tests.ino.cpp
+Antlr/Test_Parser_src/Test_Parser/Tests/sketch/Tests.ino.cpp.d
+Antlr/Test_Parser_src/Test_Parser/Tests/sketch/Tests.ino.cpp.o
+Antlr/Test_Parser_src/Test_Parser/Tests/Tests.ino
+Antlr/Test_Parser_src/Test_Parser/Tests/Tests.ino.eep
+Antlr/Test_Parser_src/Test_Parser/Tests/Tests.ino.elf
+Antlr/Test_Parser_src/Test_Parser/Tests/Tests.ino.hex
+Antlr/Test_Parser_src/Test_Parser/Tests/Tests.ino.with_bootloader.bin
+Antlr/Test_Parser_src/Test_Parser/Tests/Tests.ino.with_bootloader.hex
